--- a/environment.yml
+++ b/environment.yml
@@ -1,208 +1,307 @@
-name: /shared/why16gzl/logic_driven/consistency_env
+name: event-relation-extraction
 channels:
+  - anaconda
   - pytorch
-  - defaults
   - conda-forge
+  - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - asn1crypto=1.3.0=py37_0
-  - blas=1.0=mkl
-  - ca-certificates=2020.1.1=0
-  - certifi=2019.11.28=py37_0
-  - cffi=1.14.0=py37h2e261b9_0
-  - chardet=3.0.4=py37_1003
-  - cryptography=2.8=py37h1ba5d50_0
-  - cudatoolkit=10.1.243=h6bb024c_0
-  - cytoolz=0.9.0.1=py37h14c3975_1
-  - dill=0.2.9=py37_0
-  - freetype=2.9.1=h8a8886c_1
-  - h5py=2.10.0=py37h7918eee_0
-  - hdf5=1.10.4=hb1b8bf9_0
-  - idna=2.8=py37_0
-  - intel-openmp=2020.0=166
-  - jpeg=9b=h024ee3a_2
-  - ld_impl_linux-64=2.33.1=h53a641e_7
-  - libedit=3.1.20181209=hc058e9b_0
-  - libffi=3.2.1=hd88cf55_4
-  - libgcc-ng=9.1.0=hdf63c60_0
-  - libgfortran-ng=7.3.0=hdf63c60_0
-  - libpng=1.6.37=hbc83047_0
-  - libstdcxx-ng=9.1.0=hdf63c60_0
-  - libtiff=4.1.0=h2733197_0
-  - mkl=2020.0=166
-  - mkl-service=2.3.0=py37he904b0f_0
-  - mkl_fft=1.0.15=py37ha843d7b_0
-  - mkl_random=1.1.0=py37hd6b4f25_0
-  - msgpack-numpy=0.4.4.3=py_0
-  - msgpack-python=0.5.6=py37h6bb024c_1
-  - murmurhash=0.28.0=py37hf484d3e_0
-  - ncurses=6.2=he6710b0_0
-  - ninja=1.9.0=py37hfd86e86_0
-  - numpy=1.18.1=py37h4f9e942_0
-  - numpy-base=1.18.1=py37hde5b4d6_1
-  - olefile=0.46=py37_0
-  - openssl=1.1.1d=h7b6447c_4
-  - pillow=7.0.0=py37hb39fc2d_0
-  - pip=20.0.2=py37_1
-  - plac=0.9.6=py37_0
-  - pycparser=2.19=py37_0
-  - pyopenssl=19.1.0=py37_0
-  - pysocks=1.7.1=py37_0
-  - python=3.7.6=h0371630_2
-  - pytorch=1.4.0=py3.7_cuda10.1.243_cudnn7.6.3_0
-  - readline=7.0=h7b6447c_5
-  - requests=2.22.0=py37_1
-  - setuptools=46.0.0=py37_0
-  - six=1.14.0=py37_0
-  - sqlite=3.31.1=h7b6447c_0
-  - termcolor=1.1.0=py37_1
-  - tk=8.6.8=hbc83047_0
-  - toolz=0.10.0=py_0
-  - torchvision=0.5.0=py37_cu101
-  - tqdm=4.42.1=py_0
-  - ujson=1.35=py37h14c3975_0
-  - urllib3=1.25.8=py37_0
-  - wheel=0.34.2=py37_0
-  - wrapt=1.10.11=py37h14c3975_2
-  - xz=5.2.4=h14c3975_4
-  - zlib=1.2.11=h7b6447c_3
-  - zstd=1.3.7=h0b5b093_0
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=4.5
+  - absl-py=0.13.0
+  - aiohttp=3.7.4.post0
+  - argh=0.26.2
+  - argon2-cffi=20.1.0
+  - async-timeout=3.0.1
+  - async_generator=1.10
+  - attrs=21.2.0
+  - backcall=0.2.0
+  - backports=1.0
+  - backports.functools_lru_cache=1.6.4
+  - blas=1.0
+  - bleach=3.3.0
+  - blinker=1.4
+  - boto=2.49.0
+  - boto3=1.17.102
+  - botocore=1.20.102
+  - brotlipy=0.7.0
+  - bz2file=0.98
+  - bzip2=1.0.8
+  - c-ares=1.17.1
+  - ca-certificates=2021.5.30
+  - cached-property=1.5.2
+  - cached_property=1.5.2
+  - cachetools=4.2.2
+  - catalogue=2.0.4
+  - certifi=2021.5.30
+  - cffi=1.14.5
+  - chardet=4.0.0
+  - click=8.0.1
+  - cloudpickle=1.6.0
+  - colorama=0.4.4
+  - configparser=5.0.2
+  - cryptography=3.4.7
+  - cudatoolkit=11.1.1
+  - cupy=9.0.0
+  - curl=7.77.0
+  - cycler=0.10.0
+  - cymem=2.0.5
+  - cython-blis=0.7.4
+  - dataclasses=0.8
+  - decorator=5.0.9
+  - defusedxml=0.7.1
+  - docker-pycreds=0.4.0
+  - entrypoints=0.3
+  - expat=2.4.1
+  - fastrlock=0.6
+  - ffmpeg=4.3
+  - filelock=3.0.12
+  - freetype=2.10.4
+  - future=0.18.2
+  - gettext=0.19.8.1
+  - git=2.30.2
+  - gitdb=4.0.7
+  - gitpython=3.1.18
+  - gmp=6.2.1
+  - gnutls=3.6.13
+  - google-api-core=1.30.0
+  - google-auth=1.32.0
+  - google-auth-oauthlib=0.4.1
+  - google-cloud-core=1.7.1
+  - google-cloud-storage=1.38.0
+  - google-crc32c=1.1.2
+  - google-resumable-media=1.3.1
+  - googleapis-common-protos=1.53.0
+  - gql=0.1.0
+  - graphql-core=3.1.5
+  - grpcio=1.38.1
+  - h5py=3.3.0
+  - hdf5=1.10.6
+  - hub=2.14.2
+  - huggingface_hub=0.0.13
+  - hyperopt=0.2.5
+  - idna=2.10
+  - importlib-metadata=4.6.0
+  - importlib_metadata=4.6.0
+  - ipykernel=5.5.5
+  - ipython=7.25.0
+  - ipython_genutils=0.2.0
+  - ipywidgets=7.6.3
+  - jedi=0.18.0
+  - jinja2=3.0.1
+  - jmespath=0.10.0
+  - joblib=1.0.1
+  - jpeg=9b
+  - jsonnet=0.17.0
+  - jsonpickle=2.0.0
+  - jsonschema=3.2.0
+  - jupyter_client=6.1.12
+  - jupyter_core=4.7.1
+  - jupyterlab_pygments=0.1.2
+  - jupyterlab_widgets=1.0.0
+  - kiwisolver=1.3.1
+  - krb5=1.19.1
+  - lame=3.100
+  - lcms2=2.12
+  - ld_impl_linux-64=2.35.1
+  - libcrc32c=1.1.1
+  - libcurl=7.77.0
+  - libedit=3.1.20191231
+  - libev=4.33
+  - libffi=3.3
+  - libgcc-ng=9.3.0
+  - libgfortran-ng=7.5.0
+  - libgfortran4=7.5.0
+  - libiconv=1.16
+  - libnghttp2=1.43.0
+  - libpng=1.6.37
+  - libprotobuf=3.17.2
+  - libsodium=1.0.18
+  - libssh2=1.9.0
+  - libstdcxx-ng=9.3.0
+  - libtiff=4.2.0
+  - libuv=1.41.0
+  - libwebp-base=1.2.0
+  - llvm-openmp=11.1.0
+  - lz4-c=1.9.3
+  - markdown=3.3.4
+  - markupsafe=2.0.1
+  - matplotlib-base=3.4.2
+  - matplotlib-inline=0.1.2
+  - mccabe=0.6.1
+  - mistune=0.8.4
+  - mkl=2020.4
+  - mkl-service=2.3.0
+  - mkl_fft=1.3.0
+  - mkl_random=1.2.0
+  - more-itertools=8.8.0
+  - multidict=5.1.0
+  - murmurhash=1.0.5
+  - natsort=7.0.1
+  - nb_conda_kernels=2.3.1
+  - nbclient=0.5.3
+  - nbconvert=6.1.0
+  - nbformat=5.1.3
+  - ncurses=6.2
+  - nest-asyncio=1.5.1
+  - nettle=3.6
+  - networkx=2.5
+  - ninja=1.10.2
+  - nltk=3.4.5
+  - notebook=6.4.0
+  - numpy=1.19.2
+  - numpy-base=1.19.2
+  - nvidia-ml=7.352.0
+  - oauthlib=3.1.1
+  - olefile=0.46
+  - openh264=2.1.1
+  - openssl=1.1.1k
+  - overrides=3.1.0
+  - packaging=20.9
+  - pandas=1.2.4
+  - pandoc=2.14.0.3
+  - pandocfilters=1.4.2
+  - parso=0.8.2
+  - pathtools=0.1.2
+  - pathy=0.6.0
+  - patsy=0.5.1
+  - pcre=8.45
+  - perl=5.32.1
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
+  - pillow=7.1.2
+  - pip=21.1.3
+  - preshed=3.0.5
+  - prometheus_client=0.11.0
+  - promise=2.3
+  - prompt-toolkit=3.0.19
+  - protobuf=3.17.2
+  - psutil=5.8.0
+  - ptyprocess=0.7.0
+  - pyasn1=0.4.8
+  - pyasn1-modules=0.2.7
+  - pycodestyle=2.7.0
+  - pycparser=2.20
+  - pydantic=1.7.3
+  - pyflakes=2.3.1
+  - pygments=2.9.0
+  - pyjwt=2.1.0
+  - pymongo=3.11.4
+  - pyopenssl=20.0.1
+  - pyparsing=2.4.7
+  - pyrsistent=0.17.3
+  - pysocks=1.7.1
+  - python=3.8.10
+  - python-dateutil=2.8.1
+  - python-lmdb=0.99
+  - python_abi=3.8
+  - pytorch=1.8.1
+  - pytz=2021.1
+  - pyu2f=0.1.5
+  - pyyaml=5.4.1
+  - pyzmq=22.1.0
+  - readline=8.1
+  - regex=2021.4.4
+  - requests=2.25.1
+  - requests-oauthlib=1.3.0
+  - rsa=4.7.2
+  - s3transfer=0.4.2
+  - sacremoses=0.0.43
+  - scikit-learn=0.24.2
+  - scipy=1.6.2
+  - seaborn=0.11.1
+  - seaborn-base=0.11.1
+  - send2trash=1.7.1
+  - sentencepiece=0.1.95
+  - sentry-sdk=1.1.0
+  - setuptools=49.6.0
+  - shellingham=1.4.0
+  - shortuuid=1.0.1
+  - six=1.16.0
+  - smart_open=5.1.0
+  - smmap=3.0.5
+  - spacy=3.0.6
+  - spacy-legacy=3.0.6
+  - sqlite=3.36.0
+  - srsly=2.4.1
+  - statsmodels=0.12.2
+  - subprocess32=3.5.4
+  - tbb=2021.2.0
+  - tensorboard=2.4.1
+  - tensorboard-plugin-wit=1.8.0
+  - tensorboardx=2.2
+  - terminado=0.10.1
+  - testpath=0.5.0
+  - thinc=8.0.3
+  - threadpoolctl=2.1.0
+  - tk=8.6.10
+  - tokenizers=0.10.1
+  - torchaudio=0.8.1
+  - torchvision=0.9.1
+  - tornado=6.1
+  - tqdm=4.61.1
+  - traitlets=5.0.5
+  - transformers=4.8.2
+  - typer=0.3.1
+  - typing-extensions=3.10.0.0
+  - typing_extensions=3.10.0.0
+  - urllib3=1.26.6
+  - wandb=0.10.32
+  - wasabi=0.8.2
+  - watchdog=0.10.4
+  - wcwidth=0.2.5
+  - webencodings=0.5.1
+  - werkzeug=2.0.1
+  - wheel=0.36.2
+  - widgetsnbextension=3.5.1
+  - xz=5.2.5
+  - yaml=0.2.5
+  - yarl=1.5.1
+  - zeromq=4.3.4
+  - zipp=3.4.1
+  - zlib=1.2.11
+  - zstd=1.4.9
   - pip:
-    - absl-py==0.9.0
-    - alabaster==0.7.12
-    - allennlp==0.9.0
-    - apex
-    - attrs==19.3.0
-    - babel==2.8.0
-    - backcall==0.1.0
-    - beautifulsoup4==4.9.1
-    - bleach==3.1.4
-    - blis==0.4.1
-    - boto3==1.12.21
-    - botocore==1.15.21
-    - bs4==0.0.1
-    - cachetools==4.1.0
-    - catalogue==1.0.0
-    - click==7.1.1
-    - conllu==1.3.1
-    - cycler==0.10.0
-    - cymem==2.0.3
-    - decorator==4.4.2
-    - defusedxml==0.6.0
-    - docutils==0.15.2
-    - editdistance==0.5.3
-    - entrypoints==0.3
-    - filelock==3.0.12
-    - flaky==3.7.0
-    - flask==1.1.2
-    - flask-cors==3.0.8
-    - ftfy==5.8
-    - gevent==20.6.2
-    - google-auth==1.14.1
-    - google-auth-oauthlib==0.4.1
-    - greenlet==0.4.16
-    - grpcio==1.28.1
-    - imagesize==1.2.0
-    - importlib-metadata==1.6.0
-    - iniconfig==1.0.1
-    - ipykernel==5.1.4
-    - ipython==7.13.0
-    - ipython-genutils==0.2.0
-    - ipywidgets==7.5.1
-    - itsdangerous==1.1.0
-    - jedi==0.16.0
-    - jinja2==2.11.1
-    - jmespath==0.9.5
-    - joblib==0.14.1
-    - jsonnet==0.16.0
-    - jsonpickle==1.4.1
-    - jsonschema==3.2.0
-    - jupyter-client==6.1.0
-    - jupyter-core==4.6.3
-    - kiwisolver==1.2.0
-    - lxml==4.5.1
-    - markdown==3.2.1
-    - markupsafe==1.1.1
-    - matplotlib==3.2.1
-    - mistune==0.8.4
-    - more-itertools==8.4.0
-    - nbconvert==5.6.1
-    - nbformat==5.0.5
-    - nltk==3.4.5
-    - notebook==6.0.3
-    - numpydoc==1.1.0
-    - oauthlib==3.1.0
-    - overrides==3.1.0
-    - packaging==20.4
-    - pandas==1.0.3
-    - pandocfilters==1.4.2
-    - parsimonious==0.8.1
-    - parso==0.6.2
-    - pathlib==1.0.1
-    - pexpect==4.8.0
-    - pickleshare==0.7.5
+    - backports-csv==1.0.7
+    - beautifulsoup4==4.9.3
+    - checklist==0.0.11
+    - cheroot==8.5.2
+    - cherrypy==18.6.0
+    - dill==0.3.4
+    - en-core-web-sm==3.0.0
+    - feedparser==6.0.8
+    - huggingface-hub==0.0.8
+    - imageio==2.9.0
+    - iniconfig==1.1.1
+    - iso-639==0.4.5
+    - jaraco-classes==3.2.1
+    - jaraco-collections==3.3.0
+    - jaraco-functools==3.3.0
+    - jaraco-text==3.5.0
+    - jupyter==1.0.0
+    - jupyter-console==6.4.0
+    - longformer==0.1
+    - lxml==4.6.3
+    - munch==2.5.0
+    - nlp==0.4.0
+    - patternfork-nosql==3.6
+    - pdfminer-six==20201018
     - pluggy==0.13.1
-    - preshed==3.0.2
-    - prometheus-client==0.7.1
-    - prompt-toolkit==3.0.4
-    - protobuf==3.11.3
-    - ptyprocess==0.6.0
-    - py==1.9.0
-    - pyasn1==0.4.8
-    - pyasn1-modules==0.2.8
-    - pygments==2.6.1
-    - pyparsing==2.4.7
-    - pyrsistent==0.16.0
-    - pytest==6.0.1
-    - python-dateutil==2.8.1
-    - pytorch-pretrained-bert==0.6.2
-    - pytorch-transformers==1.1.0
-    - pytz==2020.1
-    - pyzmq==19.0.0
-    - regex==2017.4.5
-    - requests-oauthlib==1.3.0
-    - responses==0.10.16
-    - rsa==4.0
-    - s3transfer==0.3.3
-    - sacremoses==0.0.38
-    - scikit-learn==0.22.2.post1
-    - scipy==1.4.1
-    - seaborn==0.10.1
-    - send2trash==1.5.0
-    - sentencepiece==0.1.85
-    - simplejson==3.17.0
-    - sklearn==0.0
-    - snowballstemmer==2.0.0
-    - soupsieve==2.0.1
-    - spacy==2.3.2
-    - sphinx==3.2.0
-    - sphinxcontrib-applehelp==1.0.2
-    - sphinxcontrib-devhelp==1.0.2
-    - sphinxcontrib-htmlhelp==1.0.3
-    - sphinxcontrib-jsmath==1.0.1
-    - sphinxcontrib-qthelp==1.0.3
-    - sphinxcontrib-serializinghtml==1.1.4
-    - sqlparse==0.3.1
-    - srsly==1.0.2
-    - tensorboard==2.2.1
-    - tensorboard-plugin-wit==1.6.0.post3
-    - tensorboardx==2.1
-    - terminado==0.8.3
-    - testpath==0.4.4
-    - thinc==7.4.1
-    - tokenizers==0.5.2
-    - toml==0.10.1
-    - tornado==6.0.4
-    - traitlets==4.3.3
-    - transformers==2.5.1
-    - unidecode==1.1.1
-    - wasabi==0.7.1
-    - wcwidth==0.1.8
-    - webencodings==0.5.1
-    - werkzeug==1.0.1
-    - widgetsnbextension==3.5.1
-    - word2number==1.1
-    - zipp==3.1.0
-    - zope-event==4.4
-    - zope-interface==5.1.0
-prefix: /shared/why16gzl/logic_driven/consistency_env
+    - portend==2.7.1
+    - py==1.10.0
+    - pyarrow==4.0.1
+    - pytest==6.2.4
+    - python-docx==0.8.11
+    - pytorch-lightning==0.8.5
+    - qtconsole==5.1.1
+    - qtpy==1.9.0
+    - rouge-score==0.0.4
+    - sgmllib3k==1.0.0
+    - sortedcontainers==2.4.0
+    - soupsieve==2.2.1
+    - tempora==4.1.1
+    - termcolor==1.1.0
+    - test-tube==0.7.5
+    - toml==0.10.2
+    - xxhash==2.0.2
+    - zc-lockfile==2.0
+prefix: /home/tianyiyang/miniconda3/envs/event-relation-extraction
